llvm/test/tools/llubi/noalias_outside_range.ll
; NOTE: Assertions have been autogenerated by utils/update_llubi_test_checks.py UTC_ARGS: --version 6
; Ported from Miri's tests/fail/tree_borrows/outside-range.rs:
; protector checks are byte-range precise. Foreign writes outside the bytes
; previously used by the protected pointer do not fail, but invalidating an
; accessed byte does.
; RUN: not llubi --experimental-noalias --verbose < %s 2>&1 | FileCheck %s

define void @stuff(ptr noalias %x, ptr %raw) {
  %raw1 = getelementptr i8, ptr %raw, i64 1
  store i8 42, ptr %raw1
  %x2 = getelementptr i8, ptr %x, i64 2
  %v2 = load i8, ptr %x2
  %x3 = getelementptr i8, ptr %x, i64 3
  %v3 = load i8, ptr %x3
  %raw3 = getelementptr i8, ptr %raw, i64 3
  store i8 42, ptr %raw3
  ret void
}

define void @main() {
  %data = alloca [4 x i8]
  %raw = getelementptr [4 x i8], ptr %data, i64 0, i64 0
  call void @stuff(ptr %raw, ptr %raw)
  ret void
}

; CHECK: Entering function: main
; CHECK-NEXT:   %data = alloca [4 x i8], align 1 => ptr 0x8 [data]
; CHECK-NEXT:   %raw = getelementptr [4 x i8], ptr %data, i64 0, i64 0 => ptr 0x8 [data]
; CHECK-NEXT: Entering function: stuff
; CHECK-NEXT:   ptr %x = ptr 0x8 [data]
; CHECK-NEXT:   ptr %raw = ptr 0x8 [data]
; CHECK-NEXT: NoAlias: created protector node #1 for 'data' based on raw/root
; CHECK-NEXT:   %raw1 = getelementptr i8, ptr %raw, i64 1 => ptr 0x9 [data + 1]
; CHECK-NEXT: NoAlias: node #1 foreign write through raw/root on 'data' bytes [1, 2): Reserved -> Disabled
; CHECK-NEXT: NoAlias: write through raw/root on 'data' bytes [1, 2) checked 1 active noalias protector
; CHECK-NEXT:   store i8 42, ptr %raw1, align 1
; CHECK-NEXT:   %x2 = getelementptr i8, ptr %x, i64 2 => ptr 0xA [data + 2]
; CHECK-NEXT: NoAlias: node #1 local read through node #1 on 'data' bytes [2, 3): Reserved -> ReservedL
; CHECK-NEXT: NoAlias: read through node #1 on 'data' bytes [2, 3) checked 1 active noalias protector
; CHECK-NEXT:   %v2 = load i8, ptr %x2, align 1 => i8 62
; CHECK-NEXT:   %x3 = getelementptr i8, ptr %x, i64 3 => ptr 0xB [data + 3]
; CHECK-NEXT: NoAlias: node #1 local read through node #1 on 'data' bytes [3, 4): Reserved -> ReservedL
; CHECK-NEXT: NoAlias: read through node #1 on 'data' bytes [3, 4) checked 1 active noalias protector
; CHECK-NEXT:   %v3 = load i8, ptr %x3, align 1 => i8 -117
; CHECK-NEXT:   %raw3 = getelementptr i8, ptr %raw, i64 3 => ptr 0xB [data + 3]
; CHECK-NEXT: NoAlias: noalias violation: write through raw/root on 'data' bytes [3, 4) is foreign to protected node #1, but that protector is in ReservedL state
; CHECK-NEXT: Stacktrace:
; CHECK-NEXT: #0   store i8 42, ptr %raw3, align 1 at @stuff
; CHECK-NEXT: #1   call void @stuff(ptr %raw, ptr %raw) at @main
; CHECK-NEXT: Immediate UB detected: noalias violation: write through raw/root on 'data' bytes [3, 4) is foreign to protected node #1, but that protector is in ReservedL state
; CHECK-NEXT: error: Execution of function 'main' failed.
